force-app/main/default/objects/Medical__c/Medical__c.object-meta.xml
<CustomObject>
    <label>Medical</label>
    <nameField>
        <displayFormat>MD-{000000}</displayFormat>
        <label>Medical Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medicals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>