force-app/main/default/objects/Medical__c/fields/Covid_19__c.field-meta.xml
<CustomField>
    <fullName>Covid_19__c</fullName>
    <label>Covid-19</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently Impacted</fullName>
                <default>true</default>
                <label>Currently Impacted</label>
            </value>
            <value>
                <fullName>No Longer Impacted</fullName>
            </value>
            <value>
                <fullName>Marked Safe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>