force-app/main/default/objects/Medical__c/fields/End_Illness_Certificate__c.field-meta.xml
<CustomField>
    <fullName>End_Illness_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End of Illness Certificate</label>
    <type>Checkbox</type>
</CustomField>