force-app/main/default/objects/Medical__c/fields/MD_Name__c.field-meta.xml
<CustomField>
    <fullName>MD_Name__c</fullName>
    <label>MD Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>