force-app/main/default/objects/Medical__c/validationRules/Prevent_edit_if_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_edit_if_close</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Covid_19__c ), ISPICKVAL(PRIORVALUE( Covid_19__c), &quot;Marked Safe&quot;), NOT(ISPICKVAL( Covid_19__c , &quot;Marked Safe&quot;)))</errorConditionFormula>
    <errorDisplayField>Covid_19__c</errorDisplayField>
    <errorMessage>It is not possible to modify this value. A new record is required</errorMessage>
</ValidationRule>